@@ -30,7 +30,7 @@ COPY --from=build /app/target/rinha-fraud.jar app.jar
 ENV PORT=9999 \
     DATA_DIR=/data \
     THREADS=2 \
-    JAVA_OPTS="-Xmx240m -XX:+UseSerialGC --add-modules=jdk.incubator.vector"
+    JAVA_OPTS="-Xmx256m -XX:+UseSerialGC"
 
 EXPOSE 9999
 
